--- a/tp0/server/Dockerfile
+++ b/tp0/server/Dockerfile
@@ -1,4 +1,9 @@
 FROM python:3.9.7-slim
-COPY server /
+
+RUN mkdir -p /build
+WORKDIR /build
+COPY ./server/config.ini /
+COPY ./server .
+
 RUN python -m unittest tests/test_common.py
 ENTRYPOINT ["/bin/sh"]
