feat: exclude config files with .dockerignore from the build; add file mapping in compose file

--- a/tp0/server/Dockerfile
+++ b/tp0/server/Dockerfile
@@ -1,9 +1,4 @@
 FROM python:3.9.7-slim
-
-RUN mkdir -p /build
-WORKDIR /build
-COPY ./server/config.ini /
-COPY ./server .
-
+COPY server /
 RUN python -m unittest tests/test_common.py
 ENTRYPOINT ["/bin/sh"]
