--- a/tp0/docker-compose-dev.yaml
+++ b/tp0/docker-compose-dev.yaml
@@ -9,7 +9,7 @@ services:
       - PYTHONUNBUFFERED=1
       - LOGGING_LEVEL=DEBUG
     volumes:
-      - server:/build
+      - ./server/config.ini:/config.ini
     networks:
       - testing_net
 
@@ -21,15 +21,11 @@ services:
       - CLI_ID=1
       - CLI_LOG_LEVEL=DEBUG
     volumes:
-      - client1:/build
+      - ./client/config.yaml:/config.yaml
     networks:
       - testing_net
     depends_on:
       - server
-
-volumes:
- client1:
- server: 
 
 networks:
   testing_net:
