feat: add comm protocol to send bets to the server

--- a/tp0/docker-compose-dev.yaml
+++ b/tp0/docker-compose-dev.yaml
@@ -1,3 +1,4 @@
+
 version: '3.9'
 name: tp0
 services:
@@ -13,15 +14,93 @@ services:
     networks:
       - testing_net
 
-  client1:
-    container_name: client1
+  
+  client_1:
+    container_name: client_1
     image: client:latest
     entrypoint: /client
+    volumes:
+      - ./client/config.yaml:/config.yaml
     environment:
       - CLI_ID=1
       - CLI_LOG_LEVEL=DEBUG
+      - NAME=JUAN
+      - SURNAME=LOPEZ
+      - DNI=32906000
+      - BIRTH=1999-03-17
+      - NUM=12189
+    networks:
+      - testing_net
+    depends_on:
+      - server
+  client_2:
+    container_name: client_2
+    image: client:latest
+    entrypoint: /client
     volumes:
       - ./client/config.yaml:/config.yaml
+    environment:
+      - CLI_ID=2
+      - CLI_LOG_LEVEL=DEBUG
+      - NAME=SANTIAGO
+      - SURNAME=LOPEZ
+      - DNI=41300000
+      - BIRTH=1999-03-17
+      - NUM=1487
+    networks:
+      - testing_net
+    depends_on:
+      - server
+  client_3:
+    container_name: client_3
+    image: client:latest
+    entrypoint: /client
+    volumes:
+      - ./client/config.yaml:/config.yaml
+    environment:
+      - CLI_ID=3
+      - CLI_LOG_LEVEL=DEBUG
+      - NAME=JUAN
+      - SURNAME=RODRIGUEZ
+      - DNI=41095000
+      - BIRTH=1999-03-17
+      - NUM=28333
+    networks:
+      - testing_net
+    depends_on:
+      - server
+  client_4:
+    container_name: client_4
+    image: client:latest
+    entrypoint: /client
+    volumes:
+      - ./client/config.yaml:/config.yaml
+    environment:
+      - CLI_ID=4
+      - CLI_LOG_LEVEL=DEBUG
+      - NAME=JUAN
+      - SURNAME=GARCIA
+      - DNI=20627000
+      - BIRTH=1999-03-17
+      - NUM=6396
+    networks:
+      - testing_net
+    depends_on:
+      - server
+  client_5:
+    container_name: client_5
+    image: client:latest
+    entrypoint: /client
+    volumes:
+      - ./client/config.yaml:/config.yaml
+    environment:
+      - CLI_ID=5
+      - CLI_LOG_LEVEL=DEBUG
+      - NAME=ALFREDO
+      - SURNAME=MORALES
+      - DNI=34804000
+      - BIRTH=1999-03-17
+      - NUM=29289
     networks:
       - testing_net
     depends_on:
