--- a/tp0/docker-compose-dev.yaml
+++ b/tp0/docker-compose-dev.yaml
@@ -25,11 +25,11 @@ services:
     environment:
       - CLI_ID=1
       - CLI_LOG_LEVEL=DEBUG
-      - NAME=SANTIAGO
+      - NAME=JUAN
       - SURNAME=RODRIGUEZ
-      - DNI=20023000
+      - DNI=19357000
       - BIRTH=1999-03-17
-      - NUM=24828
+      - NUM=5475
     networks:
       - testing_net
     depends_on:
@@ -44,11 +44,68 @@ services:
     environment:
       - CLI_ID=2
       - CLI_LOG_LEVEL=DEBUG
-      - NAME=PEDRO
-      - SURNAME=PEREZ
-      - DNI=24769000
+      - NAME=MARTIN
+      - SURNAME=MORALES
+      - DNI=31305000
       - BIRTH=1999-03-17
-      - NUM=3858
+      - NUM=5425
+    networks:
+      - testing_net
+    depends_on:
+      - server
+  client_3:
+    container_name: client_3
+    image: client:latest
+    entrypoint: /client
+    volumes:
+      - ./client/config.yaml:/config.yaml
+      - ./.data/agency-3.csv:/bets.csv
+    environment:
+      - CLI_ID=3
+      - CLI_LOG_LEVEL=DEBUG
+      - NAME=SANTIAGO
+      - SURNAME=PEREZ
+      - DNI=43236000
+      - BIRTH=1999-03-17
+      - NUM=30117
+    networks:
+      - testing_net
+    depends_on:
+      - server
+  client_4:
+    container_name: client_4
+    image: client:latest
+    entrypoint: /client
+    volumes:
+      - ./client/config.yaml:/config.yaml
+      - ./.data/agency-4.csv:/bets.csv
+    environment:
+      - CLI_ID=4
+      - CLI_LOG_LEVEL=DEBUG
+      - NAME=ALFREDO
+      - SURNAME=RODRIGUEZ
+      - DNI=32364000
+      - BIRTH=1999-03-17
+      - NUM=13762
+    networks:
+      - testing_net
+    depends_on:
+      - server
+  client_5:
+    container_name: client_5
+    image: client:latest
+    entrypoint: /client
+    volumes:
+      - ./client/config.yaml:/config.yaml
+      - ./.data/agency-5.csv:/bets.csv
+    environment:
+      - CLI_ID=5
+      - CLI_LOG_LEVEL=DEBUG
+      - NAME=MARTIN
+      - SURNAME=GARCIA
+      - DNI=18462000
+      - BIRTH=1999-03-17
+      - NUM=15067
     networks:
       - testing_net
     depends_on:
